styles/app.css
/* ... */
.pkmnicon:not(.got) {
  filter: grayscale(.95);
  opacity: calc(1 - var(--pkmnicon-opacity));
}

.pkmnicon:not(.got):hover {
  opacity: .9;
}

.pkmnicon.got {
  background-color: var(--soft-success-color);
}

.pkmnicon::before {
  display: none;
}

.pokedex-gen > .pkmnicon:focus,
.pokedex-gen > .got.pkmnicon {
  z-index: 1;
}

/*.pokedex-gen > :not(.got).pkmnicon::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  opacity: var(--pkmnicon-opacity);
  background-color: var(--card-bg-color);
}

.pokedex-gen > :not(.got).pkmnicon:hover::after {
  opacity: .1;
}*/

.pkmnicon:is(:hover, :focus) {
  background-color: var(--button-hover-color);
}

.pkmnicon:is(:active) {
  background-color: var(--button-active-color);
}

.section-titre>load-spinner {
  transform: scale(.4);
  transform-origin: right center;
}

@keyframes apparition2 {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

nav.disabled {
  pointer-events: none;
  filter: brightness(0.4) grayscale(.5);
}





/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! CHASSES EN COURS !!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

hunt-card + hunt-card {
  content-visibility: auto;
  contain-intrinsic-size: 10px 126px;
}

.form-element {
  grid-column: 1 / 3;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  gap: 8px;
}

.bouton-hunt-caught,
.bouton-hunt-submit {
  flex-grow: 1;
  margin: 0;
}

.caught .bouton-hunt-caught {
  background-color: transparent;
  border: 2px solid var(--button-ghost-color);
  box-sizing: border-box;
  box-shadow: none;
}

.bouton-hunt-remove {
  margin: 0;
}

.hunt-card.edit .bouton-hunt-remove:not(.bouton-hunt-edit),
.hunt-card:not(.edit) .bouton-hunt-edit {
  display: none;
}

.hunt-card>.sous-titre,
.hunt-card>.liste-options,
.hunt-card>.titre-options,
.hunt-card>.cote-a-cote {
  grid-column: 1 / 3;
}

.hunt-card .liste-options + .titre-options,
.hunt-card .cote-a-cote + .liste-options,
.hunt-card .cote-a-cote + .cote-a-cote {
  margin-top: 16px;
}

.hunt-card .sous-titre>span {
  --bg: var(--card-bg-color);
}

:not(.caught).hunt-card>.caught {
  display: none;
}

.hunt-card .on-top {
  grid-column: 2 / 3;
  display: grid;
  grid-template-rows: 16px auto 25px 16px auto 8px;;
  grid-template-columns: 8px auto 1fr;
  position: relative;
  top: -10px;
}

.hunt-card .cote-a-cote {
  gap: 8px;
}

.hunt-card .cote-a-cote .liste-options {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 25px;
}

.on-top>.titre-options {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
}

.on-top>.liste-options {
  grid-row: 3 / 4;
  grid-column: 2 / 3;
}

.jeu-methode {
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns: 0 32px 8px auto 8px auto 1fr;
}

.on-top>.jeu-methode {
  grid-column: 2 / 3;
  grid-row: 5 / 6;
}

.jeu-methode>.icones {
  grid-column: 2 / 3;
  align-self: end;
}

.jeu-methode>.option-jeu,
.jeu-methode>.option-methode {
  grid-column: 4 / 5;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 25px;
}

.jeu-methode>.option-methode {
  grid-column: 6 / 7;
}

.bouton-compteur {
  box-sizing: border-box;
  width: 42px;
  height: 42px;
}

.form-element.boutons {
  margin-top: 8px;
}

.hunt-card .cote-a-cote .liste-options.ball {
  display: grid;
  grid-template-columns: 32px 1fr;
}

.liste-options.ball>.titre-options {
  grid-column: 1 / 3;
}

.liste-options.ball>.pkspr {
  align-self: center;
}

.bouton-hunt-submit-loading {
  flex-basis: 100%;
  margin-top: 16px;
}

.hunt-card:not([data-methode="Raid Dynamax"]):not([data-methode="Œuf"]) .options-DO {
  display: none;
}

.hunt-card:not([data-methode="Raid Dynamax"]) .raid,
.hunt-card:not([data-methode="Œuf"]) .oeuf {
  display: none;
}

.hunt-card[data-methode="Masuda"] .options-horsChasse,
.hunt-card[data-methode="Pokéradar"] .options-horsChasse,
.hunt-card[data-methode="Pêche à la chaîne"] .options-horsChasse,
.hunt-card[data-methode="Chaîne au Navi-Dex"] .options-horsChasse,
.hunt-card[data-methode="Chaîne SOS"] .options-horsChasse,
.hunt-card[data-methode="Ultra-Brèche"] .options-horsChasse,
.hunt-card[data-methode="Chaîne de captures"] .options-horsChasse,
.hunt-card[data-methode="Raid Dynamax"] .options-horsChasse,
.hunt-card[data-methode="Sauvage (évènement)"] .options-horsChasse,
.hunt-card[data-methode="Sauvage (garanti)"] .options-horsChasse,
.hunt-card[data-methode="Glitch"] .options-horsChasse,
.hunt-card[data-methode="Distribution"] .options-horsChasse,
.hunt-card[data-methode="Échangé"] .options-horsChasse,
.hunt-card[data-methode="Échangé (GTS)"] .options-horsChasse,
.hunt-card[data-methode="Échange miracle"] .options-horsChasse,
.hunt-card[data-methode="Échangé (œuf)"] .options-horsChasse {
  display: none;
}

.hunt-card:not([data-methode="Glitch"]):not([data-methode="Distribution"]):not([data-methode="Échangé"]):not([data-methode="Échangé (GTS)"]):not([data-methode="Échange miracle"]):not([data-methode="Échangé (œuf)"]) .options-legit {
  display: none;
}

.hunt-card[data-methode="Ultra-Brèche"] .options-compteur {
  display: none;
}

.hunt-card:not([data-methode="Ultra-Brèche"]) .options-compteur-breche {
  display: none;
}

.hunt-card:not([data-methode="Chaîne de captures"]) .options-compteur-chaine-letsgo {
  display: none;
}

.hunt-card:not([data-jeu="Légendes Arceus"]) .options-bonus-legends-arceus {
  display: none;
}

.hunt-card:not([data-jeu="Épée"]):not([data-jeu="Bouclier"]):not([data-jeu="Légendes Arceus"]) .options-gene {
  display: none;
}

.hunt-card:not([data-jeu="Épée"]):not([data-jeu="Bouclier"]) :is([id~="gene-gigamax"], [for~="gene-gigamax"]) {
  display: none;
}

.hunt-card:not([data-jeu="Légendes Arceus"]) :is([id~="gene-alpha"], [for~="gene-alpha"]) {
  display: none;
}

.options-compteur-chaine-letsgo.titre-options {
  grid-column: 1 / 2;
  white-space: nowrap;
  align-self: center;
  margin-top: 0;
}
/* ... */

